set up fast branch